syntax = "proto3";

package service;
option go_package = "github.com/gmtstephane/kpture/api/kapture";

message Auxiliary {
  string type_url = 1;
  bytes value = 2;
}

message CaptureInfo  {
  int64 Timestamp = 1;
  int64 CaptureLength =2;
  int64 Length =3;
  int64 InterfaceIndex =4;
  repeated Auxiliary AncillaryData =5;
}

message Packet {
  CaptureInfo CaptureInfo = 1;
  bytes data =2;
}

message Empty  {}

message ReadyRsp  {
  bool ready =1;
  repeated string notReady = 2;   
}

message Pod {
  string Name = 1;
  string Namespace = 2;
}

message PacketDescriptor {
  string Name = 1;
  Packet Packet = 2;
}

service AgentService{
    rpc AddPacket(stream PacketDescriptor) returns (stream Empty) {}
    rpc Ready(Pod) returns (Empty) {}
}

service ClientService{
    rpc GetPackets(Empty) returns (stream PacketDescriptor) {}
}